--- a/projet_fixed_ip_address/main.ipynb
+++ b/projet_fixed_ip_address/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,8 @@
     "import ipaddress\n",
     "from jinja2 import Environment, FileSystemLoader\n",
     "import json\n",
-    "import re"
+    "import macaddress\n",
+    "from pydhcpdparser import parser"
    ]
   },
   {
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_to_str(value):\n",
+    "    return '' if value is None else str(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,17 +109,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test_for_equal(device_name):\n",
+    "def confiugure_interface_mac_address(netbox_mac_address):\n",
+    "    #netbox_mac_address = '2A:2F:0A:9F:A8:B5'\n",
+    "    #netbox_mac_address = None\n",
+    "\n",
+    "    netbox_mac_address = convert_to_str(netbox_mac_address)\n",
+    "    mac_address = netbox_mac_address\n",
+    "    hw_addr = macaddress\n",
+    "    try:\n",
+    "        hw_addr.MAC(mac_address)\n",
+    "    except ValueError as error:\n",
+    "        #print(error)\n",
+    "        mac_address = None\n",
+    "    print(\"MAC address is {}...\".format(mac_address))\n",
+    "    return(mac_address)\n",
+    "\n",
+    "#mac_address = None\n",
+    "#confiugure_interface_mac_address(mac_address)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_for_equal(mac_address):\n",
     "    \"\"\"\n",
     "    Проверяем файл с конфигурацией на наличие в нем каких-либо настроек, связанных с передаваемым параметром\n",
     "    :param device_name\n",
     "    :return: None \n",
     "    \"\"\"\n",
+    "    device_name = ''\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    Находим составное имя (device_name) по MAC адресу\n",
+    "    \"\"\"\n",
+    "    hw_addr = mac_address.strip()\n",
+    "    with open(\"result.conf\", \"r\") as f:\n",
+    "        conf = f.read()\n",
+    "        f.close()\n",
+    "    config = parser.parse(conf)\n",
+    "    dic_config = list(config[0]['host'])\n",
+    "    for dev_name in dic_config:\n",
+    "        if hw_addr in (s for s in config[0]['host'][dev_name]['hardware'].values()):\n",
+    "            print(\"Find {} for device {}\".format(hw_addr, dev_name))\n",
+    "            device_name = dev_name\n",
     "\n",
+    "    \"\"\"\n",
+    "    Если имя находим, то удалаяем все настройки, связанные с этим именем\n",
+    "    \"\"\"\n",
     "    start,end = -2,-2 # start и end должны быть не пустыми и меньше -1\n",
     "    name = device_name.strip().casefold() # избавляемся от пробелов и игнорируем регистр\n",
     "    with open(\"result.conf\", 'r') as f: # открываем файл для чтения\n",
@@ -127,21 +181,20 @@
     "        with open(\"result.conf\", 'w') as w:\n",
     "            w.writelines(config)\n",
     "            w.close()\n",
-    "        print(\"'{}' is find and deleted there config...\".format(device_name))\n",
-    "    else: print(\"Configuration file does not contain '{}'...\".format(device_name))\n",
-    "    print(config)\n",
-    "    \n",
+    "        print(\"'{}' is find and deleted there config...\".format(mac_address))\n",
+    "    else: print(\"Configuration file does not contain '{}'...\".format(mac_address)) \n",
     "\n",
-    "#test_for_equal('SRV-PEV-5')"
+    "#test_for_equal('2A:2F:0A:9F:A8:B5')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def dhcpd_config_file(j2_device_name,j2_mac_address,j2_ip_address,event='None'):\n",
+    "def dhcpd_config_file(j2_ip_address,j2_interface,event='None'):\n",
+    "    \n",
     "    \"\"\" \n",
     "    Заполнение шаблона значениями\n",
     "    :param j2_device_name: устройство \n",
@@ -150,41 +203,45 @@
     "    :return: None\n",
     "    \"\"\"\n",
     "    \n",
-    "    test_for_equal(j2_device_name)\n",
+    "    if confiugure_interface_mac_address(j2_interface.mac_address) != None:\n",
     "    \n",
-    "    print(event)\n",
-    "    if event != 'delete':\n",
-    "        templates_path = \"./templates/\"\n",
-    "        environment = Environment(loader=FileSystemLoader(templates_path))\n",
-    "        template = environment.get_template(\"dhcpd_static.template\")\n",
-    "\n",
-    "        content = template.render(\n",
-    "        device_name = j2_device_name,\n",
-    "        mac_address = j2_mac_address,\n",
-    "        ip_address = j2_ip_address\n",
-    "        )\n",
+    "        test_for_equal(j2_interface.mac_address)\n",
     "        \n",
-    "        print(content)\n",
+    "        if event != 'delete':\n",
+    "            templates_path = \"./templates/\"\n",
+    "            environment = Environment(loader=FileSystemLoader(templates_path))\n",
+    "            template = environment.get_template(\"dhcpd_static.template\")\n",
     "\n",
-    "        # Сохраним получившийся текст\n",
-    "        with open('result.conf', 'a') as fp: \n",
-    "            fp.write(content + '\\n')\n",
-    "            fp.close()\n",
+    "            content = template.render(\n",
+    "            device_name = j2_interface.device.name+'.'+j2_interface.name.replace(\" \",\"_\"),\n",
+    "            host_name = j2_interface.device.name,\n",
+    "            mac_address = j2_interface.mac_address,\n",
+    "            ip_address = j2_ip_address\n",
+    "            )\n",
     "\n",
-    "        # Прочитаем записанный файл\n",
-    "        with open('result.conf', 'r') as fp: \n",
-    "            print(fp.read())\n",
+    "            # Сохраним получившийся конфиг\n",
+    "            with open('result.conf', 'a') as fp: \n",
+    "                fp.write(content + '\\n')\n",
+    "                fp.close()\n",
+    "            print(\"File {} is saved...\".format(\"result.conf\"))\n",
     "\n",
+    "            \"\"\" # Прочитаем записанный файл\n",
+    "            with open('result.conf', 'r') as fp: \n",
+    "                print(fp.read()) \"\"\"\n",
+    "    \n",
+    "    else: print(\"MAC address isn’t compared...\")\n",
+    "    \n",
     "#dhcpd_config_file('SRV-PEV-1','None', '1.1.1.1', 'create')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
     "def delete_ip_address(netbox_interface,netbox_ip_address,netbox_address_family):\n",
+    "    \n",
     "    \"\"\"  \n",
     "    Удаление ip адреса\n",
     "    :param netbox_interface: ссылка на объект интерфейса pynetbox\n",
@@ -199,21 +256,25 @@
     "\n",
     "    if netbox_address_family == 4:\n",
     "        ip_address = configure_interface_ipv4_address(netbox_ip_address)\n",
-    "        device_name = netbox_interface.device.name\n",
-    "        mac_address = netbox_interface.mac_address\n",
+    "        interface = netbox_interface\n",
     "    else:\n",
     "        print(\"IPv6\")\n",
     "        #configure_interface_ipv6_address(netbox_ip_address)\n",
-    "    dhcpd_config_file(device_name,mac_address,ip_address,event='delete')"
+    "    \n",
+    "    \"\"\"\n",
+    "    Удаляем запись из конфигурационного файла DHCPd-службы\n",
+    "    \"\"\"\n",
+    "    dhcpd_config_file(ip_address,interface,event='delete')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_ip_address(netbox_interface,netbox_ip_address,netbox_address_family):\n",
+    "    \n",
     "    \"\"\"  \n",
     "    Создание ip адреса\n",
     "    :param netbox_interface: ссылка на объект интерфейса pynetbox\n",
@@ -228,18 +289,20 @@
     "    \n",
     "    if netbox_address_family == 4:\n",
     "        ip_address = configure_interface_ipv4_address(netbox_ip_address)\n",
-    "        device_name = netbox_interface.device.name\n",
-    "        mac_address = netbox_interface.mac_address\n",
+    "        interface = netbox_interface\n",
     "    else:\n",
     "        print(\"IPv6\")\n",
     "        #configure_interface_ipv6_address(netbox_ip_address)\n",
     "    \n",
-    "    dhcpd_config_file(device_name,mac_address,ip_address,event='create')"
+    "    \"\"\"\n",
+    "    Добавляем запись в конфигурационный файл DHCPd-службы\n",
+    "    \"\"\"\n",
+    "    dhcpd_config_file(ip_address,interface,event='create')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,13 +336,16 @@
     "\n",
     "    if netbox_address_family == 4:\n",
     "        ip_address = configure_interface_ipv4_address(netbox_ip_address)\n",
-    "        device_name = netbox_interface.device.name\n",
-    "        mac_address = netbox_interface.mac_address\n",
+    "        interface = netbox_interface\n",
+    "        print(\"IP address V4...\")\n",
     "    else:\n",
     "        print(\"IPv6\")\n",
     "        #configure_interface_ipv6_address(netbox_ip_address)\n",
     "    \n",
-    "    dhcpd_config_file(device_name,mac_address,ip_address,event='update')"
+    "    \"\"\"\n",
+    "    Изменяем запись в конфигурационном файле DHCPd-службы\n",
+    "    \"\"\"\n",
+    "    dhcpd_config_file(ip_address,interface,event='update')"
    ]
   },
   {
@@ -291,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,9 +406,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on all addresses (0.0.0.0)\n",
+      " * Running on http://127.0.0.1:8080\n",
+      " * Running on http://10.68.5.5:8080\n",
+      "Press CTRL+C to quit\n",
+      "10.30.1.101 - - [12/Mar/2023 20:09:30] \"POST /api/fixed_ip HTTP/1.1\" 204 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updating IP address...\n",
+      "IP address V4...\n",
+      "MAC address is A1:B3:C4:C5:C5:C2...\n",
+      "Find A1:B3:C4:C5:C5:C2 for device SRV-PEV-1.Gig-E_4 \n",
+      "'A1:B3:C4:C5:C5:C2' is find and deleted there config...\n",
+      "File result.conf is saved...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10.30.1.101 - - [12/Mar/2023 20:16:38] \"POST /api/fixed_ip HTTP/1.1\" 204 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updating IP address...\n",
+      "IP address V4...\n",
+      "MAC address is None...\n",
+      "MAC address isn’t compared...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10.30.1.101 - - [12/Mar/2023 20:17:26] \"POST /api/fixed_ip HTTP/1.1\" 204 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updating IP address...\n",
+      "IP address V4...\n",
+      "MAC address is 2A:2F:0A:9F:A8:B5...\n",
+      "Configuration file does not contain '2A:2F:0A:9F:A8:B5'...\n",
+      "File result.conf is saved...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10.30.1.101 - - [12/Mar/2023 20:20:15] \"POST /api/fixed_ip HTTP/1.1\" 204 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Assigning address 10.30.1.102/24 to interface 'Gig-E 3' on device 'SRV-PEV-5'...\n",
+      "MAC address is None...\n",
+      "MAC address isn’t compared...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10.30.1.101 - - [12/Mar/2023 20:21:13] \"POST /api/fixed_ip HTTP/1.1\" 204 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updating IP address...\n",
+      "IP address V4...\n",
+      "MAC address is A1:B3:C4:C5:C3:C2...\n",
+      "Configuration file does not contain 'A1:B3:C4:C5:C3:C2'...\n",
+      "File result.conf is saved...\n",
+      "Updating IP address...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10.30.1.101 - - [12/Mar/2023 20:22:47] \"POST /api/fixed_ip HTTP/1.1\" 204 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removing address 10.30.1.102/24 from interface 'Gig-E 4' on device 'SRV-PEV-5'...\n",
+      "MAC address is 01:23:43:44:55:43...\n",
+      "Configuration file does not contain '01:23:43:44:55:43'...\n",
+      "IP address V4...\n",
+      "MAC address is 01:23:43:44:55:43...\n",
+      "Configuration file does not contain '01:23:43:44:55:43'...\n",
+      "File result.conf is saved...\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a Flask instance\n",
     "app = Flask(__name__)\n",
