--- a/nb-wh-cfg.ipynb
+++ b/nb-wh-cfg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,20 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Servers pool\n",
-      "10.30.1.0/24\n",
-      "Servers test pool\n",
-      "10.30.3.0/24\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# List all IPs prefixes from all sites\n",
     "nb_site = 'plgn'\n",
@@ -90,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,20 +101,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "host SRV-PEV-5 {\n",
-      "  hardware ethernet 2A:2F:0A:9F:A8:B5;\n",
-      "  fixed-address 10.30.1.248;\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "templates_path = \"./templates/\"\n",
@@ -146,38 +124,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app '__main__'\n",
-      " * Debug mode: off\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
-      " * Running on all addresses (0.0.0.0)\n",
-      " * Running on http://127.0.0.1:8080\n",
-      " * Running on http://10.68.5.5:8080\n",
-      "Press CTRL+C to quit\n",
-      "10.30.1.101 - - [11/Mar/2023 12:06:23] \"POST /api/fixed_ip HTTP/1.1\" 200 -\n"
+      "10.30.1.101 - - [13/Mar/2023 14:52:45] \"POST /api/fixed_ip HTTP/1.1\" 200 -\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "host SRV-PEV-5 {\n",
-      "  hardware ethernet 2A:2F:0A:9F:A8:B5;\n",
-      "  fixed-address 10.30.1.248;\n",
-      "}\n",
-      "{'event': 'updated', 'timestamp': '2023-03-11 07:06:23.021729+00:00', 'model': 'ipaddress', 'username': 'admin', 'request_id': '4fe21162-f018-4a32-a21e-559700b6208e', 'data': {'id': 14, 'url': '/api/ipam/ip-addresses/14/', 'display': '10.30.1.248/24', 'family': {'value': 4, 'label': 'IPv4'}, 'address': '10.30.1.248/24', 'vrf': None, 'tenant': {'id': 5, 'url': '/api/tenancy/tenants/5/', 'display': 'IT', 'name': 'IT', 'slug': 'it'}, 'status': {'value': 'dhcp', 'label': 'DHCP'}, 'role': None, 'assigned_object_type': 'dcim.interface', 'assigned_object_id': 67, 'assigned_object': {'id': 67, 'url': '/api/dcim/interfaces/67/', 'display': 'Gig-E 1', 'device': {'id': 10, 'url': '/api/dcim/devices/10/', 'display': 'SRV-PEV-5', 'name': 'SRV-PEV-5'}, 'name': 'Gig-E 1', 'cable': 16, '_occupied': True}, 'nat_inside': None, 'nat_outside': [], 'dns_name': 'srv-pev-5.ventprom.com', 'description': '', 'comments': '', 'tags': [], 'custom_fields': {}, 'created': '2023-01-28T06:26:50.562869Z', 'last_updated': '2023-03-11T07:06:22.921916Z'}, 'snapshots': {'prechange': {'created': '2023-01-28T06:26:50.562Z', 'last_updated': '2023-01-28T06:47:10.724Z', 'description': '', 'comments': '', 'address': '10.30.1.248/24', 'vrf': None, 'tenant': 5, 'status': 'active', 'role': '', 'assigned_object_type': 14, 'assigned_object_id': 67, 'nat_inside': None, 'dns_name': 'srv-pev-5.ventprom.com', 'custom_fields': {}, 'tags': []}, 'postchange': {'created': '2023-01-28T06:26:50.562Z', 'last_updated': '2023-03-11T07:06:22.921Z', 'description': '', 'comments': '', 'address': '10.30.1.248/24', 'vrf': None, 'tenant': 5, 'status': 'dhcp', 'role': '', 'assigned_object_type': 14, 'assigned_object_id': 67, 'nat_inside': None, 'dns_name': 'srv-pev-5.ventprom.com', 'custom_fields': {}, 'tags': []}}}\n",
+      "{'event': 'updated', 'timestamp': '2023-03-13 09:52:44.283343+00:00', 'model': 'ipaddress', 'username': 'admin', 'request_id': '83d6d31f-98e6-4249-bffb-66e7c6fc0119', 'data': {'id': 110, 'url': '/api/ipam/ip-addresses/110/', 'display': '1.1.1.1/24', 'family': {'value': 4, 'label': 'IPv4'}, 'address': '1.1.1.1/24', 'vrf': None, 'tenant': None, 'status': {'value': 'dhcp', 'label': 'DHCP'}, 'role': None, 'assigned_object_type': 'dcim.interface', 'assigned_object_id': 59, 'assigned_object': {'id': 59, 'url': '/api/dcim/interfaces/59/', 'display': 'Gig-E 3', 'device': {'id': 8, 'url': '/api/dcim/devices/8/', 'display': 'SRV-PEV-1', 'name': 'SRV-PEV-1'}, 'name': 'Gig-E 3', 'cable': None, '_occupied': False}, 'nat_inside': None, 'nat_outside': [], 'dns_name': '', 'description': '', 'comments': '', 'tags': [], 'custom_fields': {}, 'created': '2023-03-13T06:56:08.474289Z', 'last_updated': '2023-03-13T09:52:44.139155Z'}, 'snapshots': {'prechange': {'created': '2023-03-13T06:56:08.474Z', 'last_updated': '2023-03-13T09:52:15.732Z', 'description': '', 'comments': '', 'address': '1.1.1.1/24', 'vrf': None, 'tenant': None, 'status': 'dhcp', 'role': '', 'assigned_object_type': None, 'assigned_object_id': None, 'nat_inside': None, 'dns_name': '', 'custom_fields': {}, 'tags': []}, 'postchange': {'created': '2023-03-13T06:56:08.474Z', 'last_updated': '2023-03-13T09:52:44.139Z', 'description': '', 'comments': '', 'address': '1.1.1.1/24', 'vrf': None, 'tenant': None, 'status': 'dhcp', 'role': '', 'assigned_object_type': 14, 'assigned_object_id': 59, 'nat_inside': None, 'dns_name': '', 'custom_fields': {}, 'tags': []}}}\n",
       " * Serving Flask app '__main__'\n",
       " * Debug mode: off\n"
      ]
@@ -198,7 +159,7 @@
     "\n",
     "@app.route('/api/fixed_ip', methods=['POST'])\n",
     "def webhook():\n",
-    "    get_device_ips = [request.json[\"data\"][\"address\"]]\n",
+    "    \"\"\" get_device_ips = [request.json[\"data\"][\"address\"]]\n",
     "    get_device = request.json[\"data\"][\"assigned_object\"][\"device\"][\"name\"]\n",
     "    #get_interface = request.json[\"data\"][\"assigned_object\"][\"name\"]\n",
     "    get_address_family = request.json[\"data\"][\"family\"][\"value\"]\n",
@@ -221,7 +182,7 @@
     "            mac_address = get_device_interface.mac_address,\n",
     "            ip_address = ipaddress.ip_interface(device_ip).ip\n",
     "            )\n",
-    "            print(content)\n",
+    "            print(content) \"\"\"\n",
     "\n",
     "    print(request.json)\n",
     "    \n",
@@ -233,21 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "iDRAC\n",
-      "host SRV-PEV-1 {\n",
-      "  hardware ethernet None;\n",
-      "  fixed-address 10.30.1.101;\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ip = ['10.30.1.101/24']\n",
     "interface = 'iDRAC'\n",
@@ -271,7 +220,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -285,12 +234,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.7.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "0a54084e6b208ee8d1ce3989ffc20924477a5f55f5a43e22e699a6741623861e"
    }
   }
  },
