--- a/nb-wh-cfg.ipynb
+++ b/nb-wh-cfg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,35 +124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "10.30.1.101 - - [13/Mar/2023 14:52:45] \"POST /api/fixed_ip HTTP/1.1\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'event': 'updated', 'timestamp': '2023-03-13 09:52:44.283343+00:00', 'model': 'ipaddress', 'username': 'admin', 'request_id': '83d6d31f-98e6-4249-bffb-66e7c6fc0119', 'data': {'id': 110, 'url': '/api/ipam/ip-addresses/110/', 'display': '1.1.1.1/24', 'family': {'value': 4, 'label': 'IPv4'}, 'address': '1.1.1.1/24', 'vrf': None, 'tenant': None, 'status': {'value': 'dhcp', 'label': 'DHCP'}, 'role': None, 'assigned_object_type': 'dcim.interface', 'assigned_object_id': 59, 'assigned_object': {'id': 59, 'url': '/api/dcim/interfaces/59/', 'display': 'Gig-E 3', 'device': {'id': 8, 'url': '/api/dcim/devices/8/', 'display': 'SRV-PEV-1', 'name': 'SRV-PEV-1'}, 'name': 'Gig-E 3', 'cable': None, '_occupied': False}, 'nat_inside': None, 'nat_outside': [], 'dns_name': '', 'description': '', 'comments': '', 'tags': [], 'custom_fields': {}, 'created': '2023-03-13T06:56:08.474289Z', 'last_updated': '2023-03-13T09:52:44.139155Z'}, 'snapshots': {'prechange': {'created': '2023-03-13T06:56:08.474Z', 'last_updated': '2023-03-13T09:52:15.732Z', 'description': '', 'comments': '', 'address': '1.1.1.1/24', 'vrf': None, 'tenant': None, 'status': 'dhcp', 'role': '', 'assigned_object_type': None, 'assigned_object_id': None, 'nat_inside': None, 'dns_name': '', 'custom_fields': {}, 'tags': []}, 'postchange': {'created': '2023-03-13T06:56:08.474Z', 'last_updated': '2023-03-13T09:52:44.139Z', 'description': '', 'comments': '', 'address': '1.1.1.1/24', 'vrf': None, 'tenant': None, 'status': 'dhcp', 'role': '', 'assigned_object_type': 14, 'assigned_object_id': 59, 'nat_inside': None, 'dns_name': '', 'custom_fields': {}, 'tags': []}}}\n",
-      " * Serving Flask app '__main__'\n",
-      " * Debug mode: off\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
-      " * Running on http://127.0.0.1:5000\n",
-      "Press CTRL+C to quit\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a Flask instance\n",
     "app = Flask(__name__)\n",
@@ -234,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.7.8 (tags/v3.7.8:4b47a5b6ba, Jun 28 2020, 08:53:46) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
