--- a/projet_fixed_ip_address/nb_sw_int_api.ipynb
+++ b/projet_fixed_ip_address/nb_sw_int_api.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
+    "import time\n",
     "from flask import request, Response\n",
     "from flask import Flask\n",
     "from config import netbox_api\n",
@@ -75,6 +75,53 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Заполняем шаблон"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cisco_config_interface(j2_interface,event='None'):\n",
+    "    \"\"\" \n",
+    "    Заполнение шаблона значениями\n",
+    "    :param j2_interface: интерфейс \n",
+    "    :param event: событие\n",
+    "    :return: None\n",
+    "    \"\"\"   \n",
+    " \n",
+    "    environment = Environment(loader=FileSystemLoader(templates_path)) # загружаем шаблон для заполнения\n",
+    "    template = environment.get_template(\"cisco_ios_access_interface.template\")\n",
+    "\n",
+    "    content = template.render( # заполняем шаблон\n",
+    "                                interface_name = j2_interface.name,\n",
+    "                                descr = j2_interface.description,\n",
+    "                                access_vlan = j2_interface.untagged_vlan.vid,\n",
+    "                                mode = j2_interface.mode.value\n",
+    "                            )\n",
+    "    print(\"Filling in the template...\\n{}\".format(content))    \n",
+    "\n",
+    "    return content\n",
+    "\n",
+    "#get_device_interface = netbox_api.dcim.interfaces.get(136)\n",
+    "#cisco_config_interface(get_device_interface)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Отправляем готовый конфиг на устройство"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -84,24 +131,34 @@
     "    \"\"\" \n",
     "    Основная задача: конфигурация интерфейса\n",
     "    \"\"\"\n",
-    "    ios_interface_template = task.run(  # Подзадача: получаем шаблон\n",
+    "    #template = cisco_config_interface(netbox_interface)\n",
+    "    \n",
+    "    \"\"\" ios_interface_template = task.run(  # Подзадача: получаем шаблон\n",
     "        name = 'Get the configuration template, fixed value...',\n",
     "        task = template_file, # функция, импортированная из \"nornir_jinja2.plugins.tasks\"\n",
     "        template = 'cisco_ios_interface.template', \n",
     "        path = templates_path \n",
-    "    )\n",
-    "    \"\"\" task.run( # Подзадача: отправляем готовый конфиг на устройство\n",
-    "        name = 'Complete the configuration, fixed value through Netmiko',\n",
-    "        task = netmiko_send_config, # функция, импортированная из \"nornir_netmiko.tasks\"\n",
-    "        config_commands = ios_interface_template.result.split('\\n'),\n",
-    "        cmd_verify = True\n",
     "    ) \"\"\"\n",
+    "    task.run(\n",
+    "            netmiko_send_config, # функция, импортированная из \"nornir_netmiko.tasks\",\n",
+    "            name=\"Configuration interface.../\",\n",
+    "            config_commands = template.result.split('\\n'),\n",
+    "                    cmd_verify = True\n",
+    "            )\n",
     "    #print(ios_interface_template)\n",
     "    \n",
     "    return Result(\n",
     "        host=task.host,\n",
-    "        result=ios_interface_template\n",
+    "        result=\"На {} конфигурация передана...\".format(task.host)\n",
     "    )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Получаем через napalm интерфейсы с устройства"
    ]
   },
   {
@@ -110,60 +167,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#device_type = netbox_api.dcim.device_types.get(slug='cisco_ios').id\n",
-    "#device_type\n",
-    "\n",
-    "\"\"\" def hello_world(task: Task) -> Result:\n",
-    "    \n",
-    "    \n",
-    "    return Result(\n",
-    "        host=task.host,\n",
-    "        result=f\"{task.host.name} says hello world!\"\n",
-    "    ) \"\"\"\n",
-    "\n",
-    "\n",
     "def push_config_interface(netbox_interface):\n",
-    "    \n",
+    "    \"\"\"  \n",
+    "    Проверка соответствия портов между netbox и реальным устройством\n",
+    "    :param netbox_interface: ссылка на объект интерфейса pynetbox\n",
+    "    :return: None\n",
+    "    \"\"\"\n",
+    "    attempts = 3 # количество попыток подключения\n",
+    "    timeout = 5 # время ожидания между попытками в секундах\n",
+    "    name = netbox_interface.name # избавляемся от пробелов и игнорируем регистр\n",
     "    filter_query = '10.30.1.105'\n",
     "    nr = create_nornir_session()\n",
     "    sw = nr.filter(hostname = filter_query) # производим отбор по конкретному хосту\n",
-    "    #print(sw.inventory.hosts)\n",
+    "    \n",
+    "    for _ in range(attempts):\n",
+    "        get_int = sw.run(task=napalm_get, getters=['get_interfaces']) # получаем все интерфейсы с устройства в виде словаря\n",
+    "        if get_int.failed == False: \n",
+    "            print('Connection state is connected...')\n",
+    "            break\n",
+    "        else:\n",
+    "            print('Connection state is failed...')\n",
+    "            time.sleep(timeout)\n",
     "\n",
-    "    get_int = sw.run(task=napalm_get, getters=['get_interfaces']) # получаем все интерфейсы с устройства в виде словаря\n",
-    "    #print_result(get_interfaces)\n",
     "    for device in get_int.values():\n",
     "        interfaces = device.result['get_interfaces'].keys() # получаем интерфейсы как ключи словаря\n",
-    "        if netbox_interface in (intf for intf in list(interfaces)):\n",
-    "            print(\"Find {} for device {}\".format(netbox_interface, device.host))\n",
+    "        if name in (intf for intf in list(interfaces)):\n",
+    "            print(\"Find {} for device {}\".format(name, device.host))\n",
     "    \n",
-    "    #result = sw.run(netmiko_send_command, command_string=\"show version\")\n",
-    "    #result_a = sw.run(task=hello_world)\n",
-    "    #print_result(result_a)\n",
     "    \n",
-    "    \"\"\" result = sw.run(\n",
-    "        name=\"Configuration interface.../\",\n",
-    "        task=ios_config_interfaces)\n",
-    "    print_result(result) \"\"\"\n",
-    "            \n",
-    "    return Response(status=204)\n",
+    "    #result = sw.run(task=ios_config_interfaces,name='Настройка коммутаторов') \n",
+    "    result = sw.run(netmiko_send_config,config_commands=cisco_config_interface(netbox_interface).split('\\n'))\n",
+    "    print_result(result)\n",
+    "    sw.close_connections()\n",
     "    \n",
-    "push_config_interface('Ethernet0/2')\n"
+    "#push_config_interface(netbox_api.dcim.interfaces.get(136))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def delete_config_intf(netbox_interface):\n",
     "    \n",
-    "    print(\"Delete interface {} config...\".format(netbox_interface))"
+    "    print(\"Delete interface {} config...\".format(netbox_interface))\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,18 +228,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def update_config_intf(netbox_interface):\n",
     "    \n",
-    "    print(\"Updating interface {} config...\".format(netbox_interface))"
+    "    print(\"Updating interface {} config...\".format(netbox_interface))\n",
+    "    push_config_interface(netbox_interface)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,8 +276,9 @@
     "        print(\"List is equal {}, switch access interface ID: {}...\".format(device_roles, device_intf_id))\n",
     "        if get_device_interface.mgmt_only: # проверяем, является ли интерфейс management интерфейсов\n",
     "            print(\"\\tManagement interface, no changes will be performed...\")\n",
-    "        else:\n",
-    "            if request.json[\"event\"] == \"deleted\": # Конфиг интерфейса адрес будет удален\n",
+    "        else: update_config_intf(netbox_interface=get_device_interface)\n",
+    "        \n",
+    "        \"\"\" if request.json[\"event\"] == \"deleted\": # Конфиг интерфейса адрес будет удален\n",
     "\n",
     "                delete_config_intf( netbox_interface=get_device_interface\n",
     "                                    )\n",
@@ -235,7 +291,7 @@
     "\n",
     "                update_config_intf( netbox_interface=get_device_interface\n",
     "                                    )\n",
-    "         \n",
+    "            \"\"\"\n",
     "    else: print(\"List is not equal\")\n",
     "    \n",
     "        \n",
@@ -245,56 +301,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * Serving Flask app '__main__'\n",
-      "\u001b[0m * Debug mode: off\n",
-      "\u001b[0m"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
-      " * Running on all addresses (0.0.0.0)\n",
-      " * Running on http://127.0.0.1:8080\n",
-      " * Running on http://10.96.5.16:8080\n",
-      "\u001b[0mPress CTRL+C to quit\u001b[0m\n",
-      "\u001b[0m"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dictionary append into list...\u001b[0m\n",
-      "\u001b[0mDictionary append into list...\u001b[0m\n",
-      "\u001b[0mList is equal ['access_switch', 'user_device'], switch access interface ID: 136...\u001b[0m\n",
-      "\u001b[0mUpdating interface Ethernet0/3 config...\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "10.30.1.226 - - [18/Mar/2023 21:59:24] \"\u001b[0mPOST /api/config_intf HTTP/1.1\u001b[0m\" 204 -\n",
-      "\u001b[0m"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[0m"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a Flask instance\n",
     "app = Flask(__name__)\n",
