--- a/projet_fixed_ip_address/nb_sw_int_api.ipynb
+++ b/projet_fixed_ip_address/nb_sw_int_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,62 +95,30 @@
     "    :param event: событие\n",
     "    :return: None\n",
     "    \"\"\"   \n",
-    " \n",
-    "    environment = Environment(loader=FileSystemLoader(templates_path)) # загружаем шаблон для заполнения\n",
-    "    template = environment.get_template(\"cisco_ios_access_interface.template\")\n",
     "\n",
-    "    content = template.render( # заполняем шаблон\n",
-    "                                interface_name = j2_interface.name,\n",
-    "                                descr = j2_interface.description,\n",
-    "                                access_vlan = j2_interface.untagged_vlan.vid,\n",
-    "                                mode = j2_interface.mode.value\n",
-    "                            )\n",
-    "    print(\"Filling in the template...\\n{}\".format(content))    \n",
-    "\n",
+    "    def template_fill(*args,**kwargs):\n",
+    "        environment = Environment(loader=FileSystemLoader(templates_path)) # загружаем шаблон для заполнения\n",
+    "        template = environment.get_template(template_file)\n",
+    "        content = ''\n",
+    "        content = template.render( # заполняем шаблон\n",
+    "                                    interface_name = j2_interface.name,\n",
+    "                                    descr = j2_interface.description,\n",
+    "                                    access_vlan = j2_interface.untagged_vlan.vid,\n",
+    "                                    mode = j2_interface.mode.value\n",
+    "                                )\n",
+    "        print(\"Filling in the template...\\n{}\".format(content)) \n",
+    "        return content  \n",
+    "    \n",
+    "    if event != 'delete':    \n",
+    "        template_file = \"cisco_ios_access_interface.template\"\n",
+    "        content = template_fill(j2_interface, template_file)\n",
+    "    else:\n",
+    "        template_file = \"cisco_ios_default_interface.template\"\n",
+    "        content = template_fill(j2_interface, template_file)\n",
+    "            \n",
     "    return content\n",
-    "\n",
     "#get_device_interface = netbox_api.dcim.interfaces.get(136)\n",
-    "#cisco_config_interface(get_device_interface)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Отправляем готовый конфиг на устройство"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def ios_config_interfaces(task: Task) -> Result:\n",
-    "    \"\"\" \n",
-    "    Основная задача: конфигурация интерфейса\n",
-    "    \"\"\"\n",
-    "    #template = cisco_config_interface(netbox_interface)\n",
-    "    \n",
-    "    \"\"\" ios_interface_template = task.run(  # Подзадача: получаем шаблон\n",
-    "        name = 'Get the configuration template, fixed value...',\n",
-    "        task = template_file, # функция, импортированная из \"nornir_jinja2.plugins.tasks\"\n",
-    "        template = 'cisco_ios_interface.template', \n",
-    "        path = templates_path \n",
-    "    ) \"\"\"\n",
-    "    task.run(\n",
-    "            netmiko_send_config, # функция, импортированная из \"nornir_netmiko.tasks\",\n",
-    "            name=\"Configuration interface.../\",\n",
-    "            config_commands = template.result.split('\\n'),\n",
-    "                    cmd_verify = True\n",
-    "            )\n",
-    "    #print(ios_interface_template)\n",
-    "    \n",
-    "    return Result(\n",
-    "        host=task.host,\n",
-    "        result=\"На {} конфигурация передана...\".format(task.host)\n",
-    "    )"
+    "#cisco_config_interface(get_device_interface, event='delete')"
    ]
   },
   {
@@ -163,11 +131,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def push_config_interface(netbox_interface):\n",
+    "def push_config_interface(netbox_interface,event='None'):\n",
     "    \"\"\"  \n",
     "    Проверка соответствия портов между netbox и реальным устройством\n",
     "    :param netbox_interface: ссылка на объект интерфейса pynetbox\n",
@@ -179,7 +147,7 @@
     "    filter_query = '10.30.1.105'\n",
     "    nr = create_nornir_session()\n",
     "    sw = nr.filter(hostname = filter_query) # производим отбор по конкретному хосту\n",
-    "    \n",
+    "\n",
     "    for _ in range(attempts):\n",
     "        get_int = sw.run(task=napalm_get, getters=['get_interfaces']) # получаем все интерфейсы с устройства в виде словаря\n",
     "        if get_int.failed == False: \n",
@@ -194,9 +162,8 @@
     "        if name in (intf for intf in list(interfaces)):\n",
     "            print(\"Find {} for device {}\".format(name, device.host))\n",
     "    \n",
-    "    \n",
-    "    #result = sw.run(task=ios_config_interfaces,name='Настройка коммутаторов') \n",
-    "    result = sw.run(netmiko_send_config,config_commands=cisco_config_interface(netbox_interface).split('\\n'))\n",
+    "\n",
+    "    result = sw.run(netmiko_send_config,name=\"Configuration interface.../\",config_commands=cisco_config_interface(netbox_interface,event).split('\\n'))\n",
     "    print_result(result)\n",
     "    sw.close_connections()\n",
     "    \n",
@@ -204,43 +171,66 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Удаляем (сбрасываем) конфигурацию интерфейса и добавляем дефолтные настройки"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
     "def delete_config_intf(netbox_interface):\n",
     "    \n",
     "    print(\"Delete interface {} config...\".format(netbox_interface))\n",
-    "    "
+    "    push_config_interface(netbox_interface,event='delete')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_config_intf(netbox_interface):\n",
-    "    \n",
-    "    print(\"Push new interface {} config...\".format(netbox_interface))"
+    "    \"\"\" \n",
+    "    Новый интерфейс\n",
+    "    :param netbox_interface\n",
+    "    \"\"\"\n",
+    "    print(\"Push new interface {} config...\".format(netbox_interface))\n",
+    "    push_config_interface(netbox_interface,event='create')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вносим изменения в конфигурацию интерфейса"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
     "def update_config_intf(netbox_interface):\n",
-    "    \n",
+    "    \"\"\" \n",
+    "    Обновление интерфейса\n",
+    "    :param netbox_interface\n",
+    "    \"\"\"\n",
     "    print(\"Updating interface {} config...\".format(netbox_interface))\n",
-    "    push_config_interface(netbox_interface)"
+    "    push_config_interface(netbox_interface, event='update')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,16 +242,16 @@
     "    device_roles = []\n",
     "    regex = \"[a|b]_terminations\"\n",
     "    \n",
-    "    get_device_cable = conversion(list(netbox_api.dcim.cables.get(request.json[\"data\"][\"id\"])))\n",
+    "    get_cable_id = conversion(list(netbox_api.dcim.cables.get(request.json[\"data\"][\"id\"])))\n",
     "    #get_device_cable = conversion(list(netbox_api.dcim.cables.get('306')))\n",
-    "\n",
-    "    for key in get_device_cable.keys(): # заполняем список device_value и объединяем с device_keys в словарь\n",
+    "    \n",
+    "    for key in get_cable_id.keys(): # заполняем список device_value и объединяем с device_keys в словарь\n",
     "        if re.match(regex, key): # отбираем нужные ключи из словаря по регулярке\n",
     "            devices_values = []\n",
-    "            device_id = get_device_cable[key][0][0]['device']['id']\n",
+    "            device_id = get_cable_id[key][0][0]['device']['id']\n",
     "            devices_values.append(netbox_api.dcim.devices.get(device_id).device_role.slug) # роль устройства\n",
     "            devices_values.append(device_id) # id устройства\n",
-    "            devices_values.append(get_device_cable[key][0][0]['id']) # id интерфейса устройства\n",
+    "            devices_values.append(get_cable_id[key][0][0]['id']) # id интерфейса устройства\n",
     "            devices.append(dict(zip(devices_keys,devices_values))) # получаем список из словарей\n",
     "            print(\"Dictionary append into list...\")\n",
     "    \n",
@@ -276,22 +266,20 @@
     "        print(\"List is equal {}, switch access interface ID: {}...\".format(device_roles, device_intf_id))\n",
     "        if get_device_interface.mgmt_only: # проверяем, является ли интерфейс management интерфейсов\n",
     "            print(\"\\tManagement interface, no changes will be performed...\")\n",
-    "        else: update_config_intf(netbox_interface=get_device_interface)\n",
-    "        \n",
-    "        \"\"\" if request.json[\"event\"] == \"deleted\": # Конфиг интерфейса адрес будет удален\n",
+    "        else: \n",
+    "            #update_config_intf(netbox_interface=get_device_interface)\n",
+    "            if request.json[\"event\"] == \"deleted\": # Конфиг интерфейса адрес будет удален\n",
     "\n",
-    "                delete_config_intf( netbox_interface=get_device_interface\n",
-    "                                    )\n",
+    "                    delete_config_intf(netbox_interface=get_device_interface)\n",
     "\n",
     "            elif request.json[\"event\"] == \"created\": # Конфиг интерфейса будет добавлен\n",
     "\n",
-    "                create_config_intf( netbox_interface=get_device_interface)\n",
+    "                    create_config_intf(netbox_interface=get_device_interface)\n",
     "\n",
     "            elif request.json[\"event\"] == \"updated\": # Конфиг интерфейса будет изменен\n",
     "\n",
-    "                update_config_intf( netbox_interface=get_device_interface\n",
-    "                                    )\n",
-    "            \"\"\"\n",
+    "                    update_config_intf(netbox_interface=get_device_interface)\n",
+    "            \n",
     "    else: print(\"List is not equal\")\n",
     "    \n",
     "        \n",
@@ -301,9 +289,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 207,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app '__main__'\n",
+      "\u001b[0m * Debug mode: off\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\u001b[0m\n",
+      " * Running on all addresses (0.0.0.0)\n",
+      " * Running on http://127.0.0.1:8080\n",
+      " * Running on http://10.96.5.16:8080\n",
+      "\u001b[0mPress CTRL+C to quit\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List is not equal\u001b[0m\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "10.30.1.226 - - [19/Mar/2023 21:56:37] \"\u001b[0mPOST /api/config_intf HTTP/1.1\u001b[0m\" 204 -\n",
+      "\u001b[0m"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "# Create a Flask instance\n",
     "app = Flask(__name__)\n",
